--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -61,8 +61,8 @@
             <div class="contact-info-content">
               <h3 class="h3 contact-info-title">Phone</h3>
               <p class="contact-info-text">
-                <a href="tel:+25475790687" style="color: #1a4b8c; text-decoration: none;">+254 757 90 687</a><br>
-                <a href="tel:+2540201234567" style="color: #1a4b8c; text-decoration: none;">+254 020 123 4567</a>
+                <a href="tel:+254780729617" style="color: #1a4b8c; text-decoration: none;">+254 780 729 617</a><br>
+                <a href="tel:+254724878136" style="color: #1a4b8c; text-decoration: none;">+254 724 878 136</a>
               </p>
             </div>
           </div>
@@ -74,8 +74,8 @@
             <div class="contact-info-content">
               <h3 class="h3 contact-info-title">Email</h3>
               <p class="contact-info-text">
-                <a href="mailto:info@nairobi.jet" style="color: #1a4b8c; text-decoration: none;">info@nairobi.jet</a><br>
-                <a href="mailto:bookings@nairobi.jet" style="color: #1a4b8c; text-decoration: none;">bookings@nairobi.jet</a>
+                <a href="mailto:nairobijethouse@gmail.com" style="color: #1a4b8c; text-decoration: none;">nairobijethouse@gmail.com</a><br>
+                <!--<a href="mailto:bookings@nairobi.jet" style="color: #1a4b8c; text-decoration: none;">bookings@nairobi.jet</a>-->
               </p>
             </div>
           </div>
