--- a/templates/membership/login.html
+++ b/templates/membership/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nairobi Jet House - Owner Login</title>
+    <link rel="shortcut icon" href="{% static 'favicon.svg' %}" type="image/svg+xml">
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -145,7 +146,7 @@
                                 Remember me
                             </label>
                         </div>
-                        <a href="#" class="text-decoration-none">Forgot password?</a>
+                        <a href="{% url 'index'%}" class="text-decoration-none">Reteurn Home</a>
                     </div>
                     
                     <!-- Submit Button -->
