--- a/templates/index.html
+++ b/templates/index.html
@@ -181,12 +181,13 @@
           </ul>
 
         </nav>
-
+        <a href="{% url 'membership_login'%}" class="btn btn-primary"> Membership</a>
+      <!--
        {% if user.is_authenticated %}
             <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
         {% else %}
             <a id="loginBtn" class="btn btn-primary">Login</a>
-        {% endif %}
+        {% endif %}-->
 
 
       </div>
