--- a/templates/air_cargo.html
+++ b/templates/air_cargo.html
@@ -39,7 +39,7 @@
 
 
         <a href="tel:+254700000000" class="btn btn-outline">
-          <i class="bi bi-telephone"></i> +254 700 000000
+          <i class="bi bi-telephone"></i> +254 780729617
         </a>
       </div>
     </div>
